--- a/SportShop/Views/Account/Login.cshtml
+++ b/SportShop/Views/Account/Login.cshtml
@@ -1,44 +1,68 @@
-﻿@model SportShop.Models.LoginViewModel
-
+﻿
 @{
     ViewBag.Title = "Login";
-    Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>Login</h2>
+<!-- Cart view section -->
+<section id="aa-myaccount">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="aa-myaccount-area">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="aa-myaccount-login">
+                                <h4>Login</h4>
+                               
+                            @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "aa-login-form" }))
+                                {
+                                    <label for="">Username or Email address<span>*</span></label>
+                                    <input name="UserName" type="text" required placeholder="Username">
+                                    <label for="">Password<span>*</span></label>
+                                    <input name="Password" type="password" required placeholder="Password">
+                                    <button type="submit" class="aa-browse-btn">Login</button>
+                                    <label class="rememberme" for="rememberme"><input type="checkbox" id="rememberme"> Remember me </label>
+                                    <p class="aa-lost-password"><a href="#">Lost your password?</a></p>
+                            }
+                                
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="aa-myaccount-register">
+                                <h4>Register</h4>
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-       x
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "aa-login-form" }))
+                                {
+                                    <label for="">First Name<span>*</span></label>
+                                    <input name="First_Name" type="text" placeholder="Enter first name">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                    <label for="">Last Name<span>*</span></label>
+                                    <input name="Last_Name" type="text" placeholder="Enter last name">
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Login" class="btn btn-default" />
+                                    <label for="">Username<span>*</span></label>
+                                    <input name="UserName" type="text" placeholder="Username">
+
+                                    <label for="">Password<span>*</span></label>
+                                    <input name="Password" type="password" placeholder="Password">
+
+                                    <label for="">Email<span>*</span></label>
+                                    <input name="Email" type="text" placeholder="Enter your email">
+
+                                    <label for="">Mobile<span>*</span></label>
+                                    <input name="Mobile1" type="text" placeholder="Mobile">
+
+                                    <label for="">Address<span></span></label>
+                                    <input name="Address1" type="text" placeholder="Address">
+
+                                    <button type="submit" class="aa-browse-btn">Register</button>
+                                }
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+</section>
+<!-- / Cart view section -->
